# pigpio_encoder

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
pigpio_encoder/: pigpio_encoder.py
src/: main.py  pigpio_encoder.py  test.py
src/pigpio_encoder/: debounce.py  demo.py  rotary.py  rotary_mp.py
